@@ -1,15 +1,13 @@
 package com.finvisage.tests;
 
 import com.finvisage.drivers.DriverManager;
-import com.finvisage.pages.*;
+import com.finvisage.frmPages.*;
 import com.finvisage.reports.ExtentManager;
 import com.finvisage.utils.CommonUtils;
-import com.google.common.util.concurrent.Uninterruptibles;
 import org.assertj.core.api.Assertions;
 import org.testng.annotations.Test;
 
 import java.util.Map;
-import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.AssertionsForClassTypes.within;
 
@@ -19,13 +17,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"smoke", "regression"})
     public void Vanilla_FixedFloatSwap_001(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression").assignCategory("Smoke");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickVanillaFixedFloat();
         NewVanillaFixedFloatSwapPage vnp=new NewVanillaFixedFloatSwapPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -44,13 +42,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"regression"})
     public void Vanilla_FixedFloatSwap_002(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickVanillaFixedFloat();
         NewVanillaFixedFloatSwapPage vnp=new NewVanillaFixedFloatSwapPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -64,7 +62,7 @@ public class DerivativePricerSwapsTests extends BaseTest{
         for(int i=1;i<vnp.getLastCellNum();i++){
             double val = CommonUtils.stringToDouble(vnp.getPrincipalOutstanding(String.valueOf(i))) - value;
             Assertions.assertThat( CommonUtils.stringToDouble(vnp.getPrincipalOutstanding(String.valueOf(i+1))))
-                    .isCloseTo(val,within(new Double("0.01")));
+                    .isCloseTo(val,within(Double.valueOf("0.01")));
 
         }
 
@@ -74,13 +72,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"smoke", "regression"})
     public void CrossCurrency_FixedFloatSwap_001(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression").assignCategory("Smoke");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFixedFloat();
         NewCCSFixedFloatPage cp=new NewCCSFixedFloatPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -98,13 +96,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"regression"})
     public void CrossCurrency_FixedFloatSwap_002(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFixedFloat();
         NewCCSFixedFloatPage cp=new NewCCSFixedFloatPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -118,7 +116,7 @@ public class DerivativePricerSwapsTests extends BaseTest{
         for(int i=1;i<cp.getLastCellNum();i++){
             double val = CommonUtils.stringToDouble(cp.getPrincipalOutstanding(String.valueOf(i))) - value;
             Assertions.assertThat( CommonUtils.stringToDouble(cp.getPrincipalOutstanding(String.valueOf(i+1))))
-                    .isCloseTo(val,within(new Double("0.01")));
+                    .isCloseTo(val,within( Double.valueOf("0.01")));
 
         }
 
@@ -128,13 +126,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"smoke", "regression"})
     public void CrossCurrency_FloatFixedSwap_001(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression").assignCategory("Smoke");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFloatFixed();
         NewCCSFloatFixedPage cs=new NewCCSFloatFixedPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -152,13 +150,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"regression"})
     public void CrossCurrency_FloatFixedSwap_002(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFloatFixed();
         NewCCSFloatFixedPage cs=new NewCCSFloatFixedPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -172,7 +170,7 @@ public class DerivativePricerSwapsTests extends BaseTest{
         for(int i=1;i<cs.getLastCellNum();i++){
             double val = CommonUtils.stringToDouble(cs.getPrincipalOutstanding(String.valueOf(i))) - value;
             Assertions.assertThat( CommonUtils.stringToDouble(cs.getPrincipalOutstanding(String.valueOf(i+1))))
-                    .isCloseTo(val,within(new Double("0.01")));
+                    .isCloseTo(val,within( Double.valueOf("0.01")));
 
         }
     }
@@ -180,13 +178,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"smoke", "regression"})
     public void CrossCurrency_FixedFixedSwap_001(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression").assignCategory("Smoke");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFixedFixed();
         NewCCSFixedFixedPage cf=new NewCCSFixedFixedPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -205,13 +203,13 @@ public class DerivativePricerSwapsTests extends BaseTest{
     @Test(groups = {"smoke", "regression"})
     public void CrossCurrency_FixedFixedSwap_002(Map<String, String> data){
         ExtentManager.getExtentTest().assignAuthor("Vijay").assignCategory("Regression");
-        LogInPage lp = new LogInPage();
+        FRMLogInPage lp = new FRMLogInPage();
         lp.LogIn();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
                 .isEqualTo("Finvisage - Dashboard")
                 .isNotEmpty()
                 .isNotNull();
-        DashboardPage dp = new DashboardPage();
+        FRMDashboardPage dp = new FRMDashboardPage();
         dp.clickDerivativePricer().clickNewPrice().clickSwaps().clickCrossCurrencyFixedFixed();
         NewCCSFixedFixedPage cf=new NewCCSFixedFixedPage();
         Assertions.assertThat(DriverManager.getDriver().getTitle())
@@ -226,7 +224,7 @@ public class DerivativePricerSwapsTests extends BaseTest{
         for(int i=1;i<cf.getLastCellNum();i++) {
             double val = CommonUtils.stringToDouble(cf.getPrincipalOutstanding(String.valueOf(i))) - value;
             Assertions.assertThat(CommonUtils.stringToDouble(cf.getPrincipalOutstanding(String.valueOf(i + 1))))
-                    .isCloseTo(val, within(new Double("0.01")));
+                    .isCloseTo(val, within( Double.valueOf("0.01")));
         }
     }
 
